# MAD-EUParl

./: .gitignore  .gitmodules  README.md  proposal.tex  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
data/json/: dict_committees.json  dict_meps.json  dict_parties.json  mep_uris.json  party_uris.json  places_uris.json
data/linked_data/: europarl.ttl  parlialytics.ttl
docs/proposal/: proposal.tex  references.bib
mapp/: SPARQLEndpoint.py  __main__.py  constants.py  dataset_generator.py  downloader.py  formatting.py  io_handler.py  logger.py  miner.py  profiler.py  timing_handler.py
miner/: __init__.py  __main__.py  constants.py  dataset_generator.py  logger.py  miner.py  profiler.py  sparql_server.py
miner/utils/: io.py  utils.py
scripts/: stardog-start.sh
src/miner/: SPARQLEndpoint.py  __main__.py  constants.py  dataset_generator.py  downloader.py  formatting.py  io_handler.py  load_json.py  logger.py  main.py  miner.py  save.py  timing.py
